Fix CNF error for optimized testing